# playAroundWithEcs

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  components.h  ecs.h  framebuffer.h  glframebuffer.cpp  glframebuffer.h  glrenderer.cpp  glrenderer.h  imguiLayer.cpp  imguiLayer.h  main.cpp  renderSystem.cpp  renderSystem.h  renderer.h  shader.cpp  shader.frag  shader.h  shader.vert  window.cpp  window.h
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/ecsImpl/: CMakeLists.txt  components.h  ecs.h
src/renderer/: CMakeLists.txt  glframebuffer.h  glrenderer.cpp  glrenderer.h  renderer.h  shader.h
src/systems/: CMakeLists.txt  renderSystem.cpp  renderSystem.h
src/windowing/: CMakeLists.txt  window.cpp
